log/build_2025-05-21_20-09-32/c8nav/stderr.log
  File "/home/gixstudent/Desktop/Final_lab/robotics_navigation/install/c8nav/lib/python3.10/site-packages/c8nav/send_goal.py", line 7
    from sensor_msgs.msg import Image\ nfrom cv_bridge import CvBridge
                                      ^
SyntaxError: unexpected character after line continuation character

